--- a/app.json
+++ b/app.json
@@ -6,9 +6,12 @@
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "stickersmash",
+    "jsEngine": "hermes",
+
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
+      "jsEngine": "jsc",
       "supportsTablet": true
     },
     "android": {
