--- a/app.json
+++ b/app.json
@@ -7,7 +7,6 @@
     "icon": "./assets/images/icon.png",
     "scheme": "stickersmash",
     "jsEngine": "hermes",
-
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
@@ -36,7 +35,9 @@
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
-      ]
+      ],
+      "expo-notifications",
+      "expo-web-browser"
     ],
     "experiments": {
       "typedRoutes": true
