--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "react-native-webview": "13.13.5",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
-    "expo-video": "~2.2.2"
+    "expo-video": "~2.2.2",
+    "expo-av": "~15.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
