--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@tanstack/react-query": "^5.79.0",
     "ajv": "^8.17.1",
     "axios": "^1.9.0",
+    "eas-cli": "^16.13.1",
     "expo": "53.0.12",
+    "expo-av": "~15.1.6",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
     "expo-device": "~7.1.4",
@@ -37,6 +39,7 @@
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.9",
+    "expo-video": "~2.2.2",
     "expo-web-browser": "~14.2.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -50,8 +53,7 @@
     "react-native-webview": "13.13.5",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
-    "expo-video": "~2.2.2",
-    "expo-av": "~15.1.6"
+    "expo-updates": "~0.28.15"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
